api documented and code refactored
